--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
+        "mews/captcha": "^3.2",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
