--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
         "mews/captcha": "^3.2",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-sitemap": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
